--- a/config.json
+++ b/config.json
@@ -5,5 +5,6 @@
   "storageBucket": "pasarindev.appspot.com",
   "messagingSenderId": "1042266340086",
   "appId": "1:1042266340086:web:bc0c35f4d7d3093bb60ad7",
-  "measurementId": "G-X20ZQ2ZGFP"
+  "measurementId": "G-X20ZQ2ZGFP",
+  "webPushApiId": "BKBE7cBt6V5jFfU_lymZQz3mNXb_wkl_bdhdUxZ9MdCbaEemOBu5XKmDsMftmTdOoap46WAliOI4r4KXlrlMEdk"
 }
